--- a/pag2.html
+++ b/pag2.html
@@ -28,7 +28,7 @@
 <body>
     <article class="carta" style="text-align:center;">
         <h3>Este es un videito que te hice espero y te guste mi vida, no olvides que te amo con todo mi corazoncito</h3>
-        <video controls src="Videoedit.mp4"></video>
+        <video width="400px" controls src="Videoedit.mp4"></video>
     </article>
 
     <article class="carta" style="text-align:center;">
