--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 
         Hoy cumplimos 2 años juntos, pero yo quiero cumplir toda la vida contigo. Gracias por ser mi amor, gracias por existir y gracias por elegirme cada día. Te amo con todo mi corazoncito, y siempre pase lo que pase, voy a estar contigo hasta el último de mis días cuando ya estemos como unas pasitas bien arrugaditas.</p>
 
+        <div><p>Te amo mucho mi futura esposa y madre de mis retoñitos bonitos❤️ </p></div>
+
     </article>
 
     <article class="carta" style="text-align:center;">
