--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
         </div>
     </article>
 
+    <article class="carta" style="text-align: center;">
+        <a href="cumple/index.html"> Ir a la pagina de cumpleaños</a>
+    </article>
+
    <script>
     function crearCorazon() {
       const heart = document.createElement("div");
