--- a/cumple/index.html
+++ b/cumple/index.html
@@ -75,11 +75,11 @@
     </style>
 </head>
 <body>
-    <audio autoplay loop>
-        <source src="cancionyouth.mp3" type="audio/mpeg">
-    </audio>
     <div class="contenido">
         <h1> 🎉Feliz cumpleaños mi muñequita preciosa 🎉</h1>
+        <audio autoplay loop controls>
+            <source src="cancionyouth.mp3" type="audio/mpeg">
+        </audio>
         <p>Mi muñequita hermosa te quiero deciar un feliz cumpleaños y que te la pases muy bien en todos tus cumpleaños, sabes que siempre estare en cada uno de ellos por que obviamente siempre vamos a estar juntos hasta que ya estemos bien viejitos como pasitas bien arrugadas, yo se que no te puedo dar mucho ahortia pero igual sabes que todo te lo doy con todo mi corazoncito y veras que algun dia ya tendremos muchas más cosas y ahi ya podre darte todo lo bonito que mereces y más, ya me imagino cuando tenamos a nuestros retoñitos y cada uno de ellos te lleve un regalito que escogamos para ti, veras que el tiempo pasara volando y que de un dia a otro ya estaremos en esos momentos tan bonitos y nos acordaremos de estos momentos donde no teniamos mucho pero aun asi nos amamos demasiado y siempre sera asi mi amorcito</p>
         <p>Espero que te guste esta paginita la intento hacer mejor que la anterior y de algo que te gusta mas o alguien aun que me caiga medio mal por que solo yo te puedo gustar pero bueno igual te la hago por que es para ti y para el amor de mi vida lo que sea, Te amo demasiado mi futura esposa y madre de mis retoñitos bonitos 💗</p>
     </div>
