--- a/cumple/index.html
+++ b/cumple/index.html
@@ -5,76 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎉 Feliz cumple años mi vida 🎉</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-     body {
-        margin: 0;
-        height: 100vh; 
-      background-image: url("fondo.jpg");
-      background-size: auto 100%;
-      background-position: center top;
-      background-repeat: no-repeat;
-      background-attachment: scroll;
-        }
-
-    .contenido {
-        text-align: center;
-        max-width: 80%;
-        margin: auto;  
-        background: rgba(255, 255, 255, 0.6); 
-        padding: 15px;
-        border-radius: 15px;
-        font-size: 1rem;
-    }
-    .boton-contenedor {
-        display: flex;
-        justify-content: center; 
-        margin-top: 20px;        
-    }
-    .btn {
-      padding: 10px 20px;
-      font-size: 18px;
-      background: #fd83c0;
-      border: none;
-      border-radius: 10px;
-      color: white;
-      cursor: pointer;
-    }
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-    .modal img {
-      max-width: 80%;
-      max-height: 80%;
-      margin: 10px;
-      border-radius: 15px;
-      box-shadow: 0px 0px 10px black;
-    }
-    .modal video {
-      max-width: 80%;
-      max-height: 80%;
-      margin: 10px;
-      border-radius: 15px;
-      box-shadow: 0px 0px 10px black;
-    }
-    .close {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 40px;
-      color: white;
-      cursor: pointer;
-    }
-
-    </style>
 </head>
 <body>
+  <nav class="contenido">
+    <a href="../index.html">Inicio</a>
+    <a href="../pag2.html">Segunda Página</a>
+    <a href="../cumple/index.html">Página de Cumpleaños</a>
+    <a href="../bienvenida/index.html">Bienvenida mi chiquilla</a>
+  </nav>
     <div class="contenido">
         <h1> 🎉Feliz cumpleaños mi muñequita preciosa 🎉</h1>
         <audio autoplay loop controls>
