--- a/pag2.html
+++ b/pag2.html
@@ -23,9 +23,29 @@
         line-height: 1.8;
         z-index: 10; 
     }
+    nav.carta {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    nav.carta a {
+        margin: 0 15px;
+        text-decoration: none;
+        color: #ff69b4;
+        font-weight: bold;
+    }
+    nav.carta a:hover {
+        text-decoration: underline;
+    }
+    
     </style>
 </head>
 <body>
+    <nav class="carta">
+    <a href="index.html">Inicio</a>
+    <a href="pag2.html">Segunda Página</a>
+    <a href="cumple/index.html">Página de Cumpleaños</a>
+    <a href="bienvenida/index.html">Bienvenida mi chiquilla</a>
+</nav>
     <article class="carta" style="text-align:center;">
         <h3>Este es un videito que te hice espero y te guste mi vida, no olvides que te amo con todo mi corazoncito</h3>
         <video width="400px" controls src="Videoedit.mp4"></video>
@@ -37,9 +57,6 @@
         </div>
     </article>
 
-    <nav class="carta" style="text-align: center;">
-        <a href="index.html">Regresar a la carta</a>
-    </nav>
 
 </body>
 </html>
