--- a/bienvenida/index.html
+++ b/bienvenida/index.html
@@ -38,9 +38,9 @@
     <section id="galeria" style="margin-top:18px">
       <h3 style="margin:10px 0 8px 8px; text-align:center">Galería de fotos</h3>
       <div class="galeria">
-        <div class="thumb"><img src="foto2.jpg" alt="Recuerdo 1" data-large="images/gal1.jpg"></div>
-        <div class="thumb"><img src="foto3.jpg" alt="Recuerdo 2" data-large="images/gal2.jpg"></div>
-        <div class="thumb"><img src="foto4.jpg" alt="Recuerdo 3" data-large="images/gal3.jpg"></div>
+        <div class="thumb"><img src="foto2.jpg" alt="Recuerdo 1" data-large="foto2.jpg"></div>
+        <div class="thumb"><img src="foto3.jpg" alt="Recuerdo 2" data-large="foto3.jpg"></div>
+        <div class="thumb"><img src="foto4.jpg" alt="Recuerdo 3" data-large="foto4.jpg"></div>
       </div>
     </section>
 
